samples/_failures_safe/1761301974_5b91e6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0314a4ec.c: In function ‘matrix_determinant’:
./samples/SAFE/__tmp_0314a4ec.c:125:9: error: expected declaration or statement at end of input
  125 |         double subdet = matrix_determinant(&sub);
      |         ^~~~~~
./samples/SAFE/__tmp_0314a4ec.c:125:9: error: expected declaration or statement at end of input
